--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2205,3 +2205,70 @@ body {
 .cid-qtXd0iVuvH DIV {
   text-align: left;
 }
+.cid-qtXqvpeCcG {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-qtXqvpeCcG .content {
+    text-align: center;
+  }
+  .cid-qtXqvpeCcG .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qtXqvpeCcG .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-qtXqvpeCcG .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-qtXqvpeCcG .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-qtXqvpeCcG .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-qtXqvpeCcG .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-qtXqvpeCcG .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qtXqvpeCcG .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-qtXqvpeCcG .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qtXqvpeCcG .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qtXqvpeCcG .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qtXqvpeCcG .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
