--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1784,6 +1784,76 @@ body {
     -webkit-justify-content: center;
   }
 }
+.cid-qtYmbp5sXd {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
+}
+.cid-qtYmbp5sXd H2 {
+  color: #060505;
+}
+.cid-qtYmbp5sXd .mbr-section-subtitle {
+  color: #060505;
+}
+.cid-qtYaKXvd9g {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
+}
+.cid-qtYaKXvd9g .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-qtYaKXvd9g .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-qtYaKXvd9g .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-qtYaKXvd9g .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-qtYaKXvd9g .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-qtYaKXvd9g .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-qtYaKXvd9g .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-qtYaKXvd9g .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-qtYaKXvd9g .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-qtYaKXvd9g .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-qtYaKXvd9g UL {
+  color: #2e2e2e;
+}
 .cid-qr90EaqisB .navbar {
   padding: .5rem 0;
   background: #333333;
@@ -2143,67 +2213,6 @@ body {
     border-right: .30em solid transparent;
     border-left: .30em solid transparent;
   }
-}
-.cid-qtXd0iVuvH {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background: linear-gradient(45deg, #177396, #ca2955);
-}
-.cid-qtXd0iVuvH .list-group-item {
-  padding: .75rem 3.25rem;
-}
-.cid-qtXd0iVuvH .plan {
-  word-break: break-word;
-  position: relative;
-  max-width: 300px;
-  padding-right: 0;
-  padding-left: 0;
-  color: #767676;
-}
-.cid-qtXd0iVuvH .plan .list-group-item {
-  position: relative;
-  -webkit-justify-content: center;
-  justify-content: center;
-  border: 0;
-}
-.cid-qtXd0iVuvH .plan .list-group-item::after {
-  position: absolute;
-  bottom: 0;
-  left: 20%;
-  width: 60%;
-  height: 2px;
-  content: "";
-  background-color: #eaeaea;
-}
-.cid-qtXd0iVuvH .plan .list-group-item:last-child::after {
-  display: none;
-}
-.cid-qtXd0iVuvH .plan-header {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-qtXd0iVuvH .plan-header,
-.cid-qtXd0iVuvH .plan-body {
-  background-color: #fff;
-}
-.cid-qtXd0iVuvH .price-figure {
-  font-weight: 700;
-  color: #232323;
-}
-.cid-qtXd0iVuvH .price-value {
-  font-weight: 700;
-  vertical-align: top;
-}
-@media (max-width: 550px) {
-  .cid-qtXd0iVuvH .price-figure {
-    font-size: 4.25rem;
-  }
-}
-.cid-qtXd0iVuvH UL {
-  text-align: left;
-}
-.cid-qtXd0iVuvH DIV {
-  text-align: left;
 }
 .cid-qtXqvpeCcG {
   padding-top: 30px;
