--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3774,3 +3774,135 @@ body {
     border-left: .30em solid transparent;
   }
 }
+.cid-qy6HXUm2bU {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qy6HXUm2bU .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-qy6HXUm2bU .number-wrap {
+  color: #565656;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-qy6HXUm2bU .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #28262b;
+}
+.cid-qy6HXUm2bU .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-qy6HXUm2bU .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #28262b;
+}
+.cid-qy6HXUm2bU .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qy6HXUm2bU .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-qy6HXUm2bU .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-qy6HXUm2bU .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-qy6HXUm2bU .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-qy6HXUm2bU .number,
+  .cid-qy6HXUm2bU .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-qy6HXUm2bU .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-qy6HMQajAs {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-qy6HMQajAs .btn-social {
+  border: none !important;
+}
+.cid-qy6HMQajAs [class^="socicon-"]:before,
+.cid-qy6HMQajAs [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-qy6HMQajAs .btn {
+    font-size: 20px !important;
+  }
+}
