--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1338,7 +1338,7 @@ body {
   min-height: 100vh;
 }
 .cid-qtYmbp5sXd {
-  padding-top: 60px;
+  padding-top: 120px;
   padding-bottom: 60px;
   background-image: url("../../../assets/images/mbr-1620x1080.jpg");
 }
@@ -1564,7 +1564,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #060505;
 }
 .cid-qr90EaqisB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1991,7 +1991,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #060505;
 }
 .cid-qr90EaqisB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2458,7 +2458,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #060505;
 }
 .cid-qr90EaqisB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3054,7 +3054,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #060505;
 }
 .cid-qr90EaqisB button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
