--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -579,8 +579,8 @@ a:hover {
   color: #dfd9c6;
 }
 /* Scroll to top button*/
-.scrollToTop_wraper {
-  opacity: 0 !important;
+#scrollToTop a {
+  border-radius: 100px;
 }
 /* Others*/
 .note-check a[data-value=Rubik] {
@@ -1696,6 +1696,105 @@ body {
     border-right: .30em solid transparent;
     border-left: .30em solid transparent;
   }
+}
+.cid-qGRPFRwFm6 {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background: url("../../../assets/images/download-300x168.jpg");
+}
+.cid-qGRPFRwFm6 .mbr-section-subtitle {
+  color: #060505;
+  font-weight: 300;
+  text-align: center;
+}
+.cid-qGRPFRwFm6 .number-wrap {
+  color: #060505;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-qGRPFRwFm6 .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #28262b;
+}
+.cid-qGRPFRwFm6 .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-qGRPFRwFm6 .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #28262b;
+}
+.cid-qGRPFRwFm6 .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qGRPFRwFm6 .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-qGRPFRwFm6 .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-qGRPFRwFm6 .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-qGRPFRwFm6 .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-qGRPFRwFm6 .number,
+  .cid-qGRPFRwFm6 .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-qGRPFRwFm6 .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-qGRRd7ASsx {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/download-300x168.jpg");
+}
+.cid-qGRRd7ASsx .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-qGRRd7ASsx H2 {
+  color: #060505;
 }
 .cid-qr91ZaMmmX {
   background-image: url("../../../assets/images/fireworks-wallpaper-1702-1848-hd-wallpapers-1920x1200.jpg");
